--- a/sass/blog/_comment-list.scss
+++ b/sass/blog/_comment-list.scss
@@ -23,7 +23,7 @@
 		border-bottom: 1px solid $color__border-default;
 	}
 	li {
-		font-size: $font__size-small;
+		font-size: $font__size--small;
 		padding: 0.625em; 
 		margin: 0;
 		p {
