--- a/sass/blog/_entrymeta.scss
+++ b/sass/blog/_entrymeta.scss
@@ -1,7 +1,7 @@
 .entry__meta,
 .entry__meta--footer {
 	color: $grey;
-	font-size: $font__size-small;
+	font-size: $font__size--small;
 	margin-bottom: 15px;
 }
 .links__cat, .links__tag, .link__comment {
