--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -48,7 +48,7 @@
 
 .gallery-caption {
 	display: block;
-	font-size: $font__size-small;
+	font-size: $font__size--small;
 	.gallery-columns-6 &,
 	.gallery-columns-7 &,
 	.gallery-columns-8 &,
