--- a/sass/sidebar/_sidebar.scss
+++ b/sass/sidebar/_sidebar.scss
@@ -11,7 +11,7 @@
 		margin-left: 0.5em;
 		li {
 			padding: 0.5em 0;
-			font-size: $font__size-small;
+			font-size: $font__size--small;
 		}
 	}
 	a {
