--- a/sass/typography/_links.scss
+++ b/sass/typography/_links.scss
@@ -26,7 +26,7 @@ a {
 		color: $white;
 		cursor: pointer; 
 		display: inline-block;
-		font-size: $font__size-small;
+		font-size: $font__size--small;
 		padding: 5px 20px;
 		text-decoration: none;
 		text-transform: uppercase;
