--- a/sass/_accessibility.scss
+++ b/sass/_accessibility.scss
@@ -16,7 +16,7 @@
 		color: #21759b;
 		display: block;
 		font-size: 14px;
-		font-weight: bold;
+		font-weight: $font__weight--bold;
 		height: auto;
 		left: 5px;
 		line-height: normal;
