--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -7,7 +7,7 @@ input[type="submit"] {
 	@include border-radius(2px);
 	color: $white;
 	cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */
-	font-size: $font__size-small;
+	font-size: $font__size--small;
 	line-height: 2;
 	text-transform: uppercase;
 	-webkit-appearance: button; /* Corrects inability to style clickable 'input' types in iOS */
