--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -5,7 +5,7 @@ select,
 textarea {
 	color: $color__text-main;
 	font-family: $font__sans;
-	font-size: $font__size-default;
+	font-size: $font__size--default;
 	line-height: $font__line-height-body;
 }
 
@@ -14,7 +14,7 @@ p {
 }
 
 .text--small {
-	font-size: $font__size-small;
+	font-size: $font__size--small;
 }
 
 @import "copy";
