--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -1,5 +1,5 @@
 .site__header { 
-	background: rgba($color__text-main, 1);
+	background: rgba($color__text, 1);
 	@media screen and (min-width: $tablet-portrait) {
 		padding: 20px 0;
 	}
