--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -33,7 +33,7 @@ h4 {
 	font-size: $font__size--medium;
 	margin: 15px 0;
 	&.title__sidebar {
-		border-bottom: 1px solid $color__border-default;
+		border-bottom: 1px solid $color__border;
 		text-transform: uppercase;	
 	}
 }
