--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -3,7 +3,7 @@ button,
 input,
 select,
 textarea {
-	color: $color__text-main;
+	color: $color__text;
 	font-family: $font__sans;
 	font-size: $font__size--default;
 	line-height: $font__line-height-body;
