--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -30,7 +30,7 @@ html {
 html, body { overflow-x: hidden }
 
 body {
-	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
+	background: $color__background--body; /* Fallback for when there is no custom background color defined. */
 }
 article,
 aside,
