--- a/sass/typography/_links.scss
+++ b/sass/typography/_links.scss
@@ -2,12 +2,12 @@ a {
 	color: $color__link;
 	@include transition (0.2s, ease-in-out);
 	&:visited {
-		color: $color__link-visited;
+		color: $color__link--visited;
 	}
 	&:hover,
 	&:focus,
 	&:active {
-		color: $color__link-hover;
+		color: $color__link--hover;
 	}
 	&.link__more {
 		text-decoration: none;
@@ -20,8 +20,8 @@ a {
 		@extend .link__more;
 	}
 	&.button {
-		background: $color__background-button;
-		border: 1px solid $color__border-button;
+		background: $color__background--button;
+		border: 1px solid $color__border--button;
 		@include border-radius(2px);
 		color: $white;
 		cursor: pointer; 
@@ -31,12 +31,12 @@ a {
 		text-decoration: none;
 		text-transform: uppercase;
 		&:hover {
-			background: $color__background-button-hover;
-			border-color: $color__border-button-hover;
+			background: $color__background--button-hover;
+			border-color: $color__border--button-hover;
 		}
 		&:focus, 
 		&:active {
-			border-color: $color__border-button-focus;
+			border-color: $color__border--button-focus;
 		}
 	}
 }
