--- a/sass/style.scss
+++ b/sass/style.scss
@@ -50,7 +50,7 @@ $color__border--button-focus: $silver;
 
 // Inputs
 $color__input: $grey;
-$color__input-focus: $black;
+$color__input--focus: $black;
 $color__input--border: $silver;
 
 // Fonts
