--- a/sass/_accessibility.scss
+++ b/sass/_accessibility.scss
@@ -10,7 +10,7 @@
 	&:active,
 	&:focus {
 		background-color: #f1f1f1;
-		@include border-radius(3px);
+		border-radius: 3px;
 		box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 		clip: auto !important;
 		color: #21759b;
