--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -4,7 +4,7 @@ input[type="reset"],
 input[type="submit"] {
 	background: $color__background--button;
 	border: 1px solid $color__border--button;
-	@include border-radius(2px);
+	border-radius: 2px;
 	color: $white;
 	cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */
 	font-size: $font__size--small;
