--- a/sass/typography/_links.scss
+++ b/sass/typography/_links.scss
@@ -22,7 +22,7 @@ a {
 	&.button {
 		background: $color__background--button;
 		border: 1px solid $color__border--button;
-		@include border-radius(2px);
+		border-radius: 2px;
 		color: $white;
 		cursor: pointer; 
 		display: inline-block;
