Added mixin for placeholder.

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -53,6 +53,13 @@
   }
 }
 
+@mixin placeholder {
+  &::-webkit-input-placeholder {@content}
+  &:-moz-placeholder           {@content}
+  &::-moz-placeholder          {@content}
+  &:-ms-input-placeholder      {@content}
+}
+
 // Flexbox 
 //https://github.com/mastastealth/sass-flex-mixin/blob/master/_flex.scss
 @mixin flexbox {
