--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -2,18 +2,8 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	background: $color__background--button;
-	border: 1px solid $color__border--button;
-	border-radius: 2px;
-	color: $white;
-	cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */
-	font-size: $font__size--small;
-	line-height: 2;
-	text-transform: uppercase;
+	@extend .button;
 	-webkit-appearance: button; /* Corrects inability to style clickable 'input' types in iOS */
-	&:hover {
-		background: $color__background--button-hover;
-		@include transition (.07s, ease-in);
-	}
+
 }
 
