--- a/style.css
+++ b/style.css
@@ -78,6 +78,12 @@ small { font-size: 75%; }
 
 big { font-size: 125%; }
 
+.button, button, input[type="button"], input[type="reset"], input[type="submit"] { background: #339966; border: 1px solid #339966; border-radius: 2px; color: #fff; cursor: pointer; display: inline-block; font-size: 14px; padding: 5px 20px; text-decoration: none; text-transform: uppercase; }
+
+.button:hover, button:hover, input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover { background: #333; border-color: #333; }
+
+.button:focus, button:focus, input[type="button"]:focus, input[type="reset"]:focus, input[type="submit"]:focus, .button:active, button:active, input[type="button"]:active, input[type="reset"]:active, input[type="submit"]:active { border-color: #ccc; }
+
 a { color: #339966; -webkit-transition: 0.2s, ease-in-out; -moz-transition: 0.2s, ease-in-out; -ms-transition: 0.2s, ease-in-out; -o-transition: 0.2s, ease-in-out; transition: 0.2s, ease-in-out; }
 
 a:visited { color: #339966; }
@@ -87,12 +93,6 @@ a:hover, a:focus, a:active { color: #cc9900; }
 a.link__more, a.comment-reply-link { text-decoration: none; }
 
 a.link__more:after, a.comment-reply-link:after { content: "\00bb"; padding-left: 5px; }
-
-a.button { background: #339966; border: 1px solid #339966; border-radius: 2px; color: #fff; cursor: pointer; display: inline-block; font-size: 14px; padding: 5px 20px; text-decoration: none; text-transform: uppercase; }
-
-a.button:hover { background: #333; border-color: #333; }
-
-a.button:focus, a.button:active { border-color: #ccc; }
 
 h1, h2, h3, h4, h5, h6 { clear: both; color: #333; font-family: "Droid Serif", Georgia, Times, "Times New Roman", serif; font-weight: 700; }
 
@@ -341,9 +341,7 @@ button, input, select, textarea { font-size: 100%; /* Corrects font size not bei
 
 select { max-width: 100%; }
 
-button, input[type="button"], input[type="reset"], input[type="submit"] { background: #339966; border: 1px solid #339966; border-radius: 2px; color: #fff; cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */ font-size: 14px; line-height: 2; text-transform: uppercase; -webkit-appearance: button; /* Corrects inability to style clickable 'input' types in iOS */ }
-
-button:hover, input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover { background: #333; -webkit-transition: 0.07s, ease-in; -moz-transition: 0.07s, ease-in; -ms-transition: 0.07s, ease-in; -o-transition: 0.07s, ease-in; transition: 0.07s, ease-in; }
+button, input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; /* Corrects inability to style clickable 'input' types in iOS */ }
 
 input[type="checkbox"], input[type="radio"] { -webkit-box-sizing: content-box; -moz-box-sizing: content-box; box-sizing: content-box; padding: 0; }
 
