--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,8 +55,8 @@ $color__input--border: $silver;
 
 // Fonts
 $font__sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font__serif: 'Droid Serif', Georgia, Times, 'Times New Roman', serif;
-$font__heading: 'Droid Serif', Georgia, Times, 'Times New Roman', serif;
+$font__serif: 'Inria Serif', Georgia, Times, 'Times New Roman', serif;
+$font__heading: 'Inria Serif', Georgia, Times, 'Times New Roman', serif;
 $font__line-height-body: 1.5;
 
 $font__size--xlarge: 30px;
