Updated the main navigation with different js and Svg.

--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -1,39 +1,14 @@
 .site__header { 
-	background: rgba($color__text, 1);
+	background: rgba($color__text, 0.75);
 	@media screen and (min-width: $tablet-portrait) {
 		padding: 20px 0;
 	}
 }
 .site__header--wrapper {
-	@extend .container;
+	padding: 0 20px;
 	@include flexbox;
-	@include flex-direction(column);
-		.site__branding {
-			@include order(2);
-		}
-		.site__nav {
-			@include order(1);
-		}
-	@media screen and (min-width: $phone-wide-landscape) {
-		.site__branding {
-			width: 100%;
-			@include order(1);
-		}
-		.site__nav {
-			width: 100%;
-			@include order(2);
-		}
-	}
-	@media screen and (min-width: $tablet-portrait) {
-		@include flex-direction(row);
-		@include align-items(center);
-		.site__branding {
-			width: 30%;
-		}
-		.site__nav {
-			width: 70%;
-		}
-	}
+	@include justify-content(space-between);
+	@include align-items(center);
 }
 
 @import "branding";
