--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ a.link__more, a.comment-reply-link { text-decoration: none; }
 
 a.link__more:after, a.comment-reply-link:after { content: "\00bb"; padding-left: 5px; }
 
-h1, h2, h3, h4, h5, h6 { clear: both; color: #333; font-family: "Droid Serif", Georgia, Times, "Times New Roman", serif; font-weight: 700; }
+h1, h2, h3, h4, h5, h6 { clear: both; color: #333; font-family: "Inria Serif", Georgia, Times, "Times New Roman", serif; font-weight: 700; }
 
 h1 { font-size: 30px; margin: 0 0 20px; }
 
@@ -148,11 +148,11 @@ td, th { padding: 3px 5px; }
 ---------------------------*/
 .row { width: 100%; }
 
-.container, .container--narrow, .site__header--wrapper { display: block; margin: 0 auto; position: relative; width: 100%; max-width: 1200px; }
+.container, .container--narrow { display: block; margin: 0 auto; position: relative; width: 100%; max-width: 1200px; }
 
-.container:before, .container--narrow:before, .site__header--wrapper:before, .container:after, .container--narrow:after, .site__header--wrapper:after { content: ""; display: table; }
+.container:before, .container--narrow:before, .container:after, .container--narrow:after { content: ""; display: table; }
 
-.container:after, .container--narrow:after, .site__header--wrapper:after { clear: both; }
+.container:after, .container--narrow:after { clear: both; }
 
 .container--narrow { max-width: 800px; }
 
@@ -176,22 +176,11 @@ td, th { padding: 3px 5px; }
 
 .content__fourofour { display: block; margin: 0 auto; max-width: 500px; padding-top: 50px; padding-bottom: 200px; width: 100%; }
 
-.site__header { background: #404040; }
+.site__header { background: rgba(64, 64, 64, 0.75); }
 
 @media screen and (min-width: 48em) { .site__header { padding: 20px 0; } }
 
-.site__header--wrapper { display: -webkit-box; display: -webkit-flex; display: -moz-flex; display: -ms-flexbox; display: flex; -webkit-box-direction: normal; -webkit-box-orient: vertical; -webkit-flex-direction: column; -moz-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
-
-.site__header--wrapper .site__branding { -webkit-box-ordinal-group: 3; -webkit-order: 2; -moz-order: 2; -ms-flex-order: 2; order: 2; }
-
-.site__header--wrapper .site__nav { -webkit-box-ordinal-group: 2; -webkit-order: 1; -moz-order: 1; -ms-flex-order: 1; order: 1; }
-
-@media screen and (min-width: 37.5em) { .site__header--wrapper .site__branding { width: 100%; -webkit-box-ordinal-group: 2; -webkit-order: 1; -moz-order: 1; -ms-flex-order: 1; order: 1; }
-  .site__header--wrapper .site__nav { width: 100%; -webkit-box-ordinal-group: 3; -webkit-order: 2; -moz-order: 2; -ms-flex-order: 2; order: 2; } }
-
-@media screen and (min-width: 48em) { .site__header--wrapper { -webkit-box-direction: normal; -webkit-box-orient: horizontal; -webkit-flex-direction: row; -moz-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -ms-flex-align: center; -webkit-align-items: center; -moz-align-items: center; align-items: center; }
-  .site__header--wrapper .site__branding { width: 30%; }
-  .site__header--wrapper .site__nav { width: 70%; } }
+.site__header--wrapper { padding: 0 20px; display: -webkit-box; display: -webkit-flex; display: -moz-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; -webkit-justify-content: space-between; -moz-justify-content: space-between; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; -webkit-align-items: center; -moz-align-items: center; align-items: center; }
 
 .site__title { margin: 0; }
 
@@ -202,6 +191,8 @@ td, th { padding: 3px 5px; }
 @media screen and (min-width: 48em) { .site__title a { margin: 0; padding: 0; } }
 
 .site__description { display: none; margin: 0; }
+
+.main__nav { border: 1px solid orange; }
 
 .main__nav ul { text-align: center; }
 
@@ -231,24 +222,24 @@ td, th { padding: 3px 5px; }
 
 .main__nav ul ul .current_page_parent:hover, .main__nav .current_page_parent .current_page_item > a:hover { background: #339966; color: #fff; }
 
-.main__nav--toggle { cursor: pointer; display: none; padding: 10px; }
+.menu__toggle { cursor: pointer; display: none; z-index: 9999; }
 
-@media screen and (max-width: 37.5em) { .main__nav--toggle { background: #404040; border: none; color: #fff; display: inline-block; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margin: 0; text-decoration: none; text-align: left; text-transform: uppercase; width: 100%; }
-  .main__nav--toggle a, .main__nav--toggle a:hover { color: #fff; text-decoration: none; }
-  .main__nav--toggle:before { content: '\2261'; margin-right: 10px; } }
+@media screen and (max-width: 48em) { .menu__toggle { background: url(images/hamburger.svg) no-repeat; background-size: 28px 28px; border: none; border-radius: 0; display: block; height: 28px; padding: 0; position: absolute; right: 20px; top: 20px; text-indent: -9999px; width: 28px; z-index: 9999; }
+  .menu__toggle:hover { background: url(images/hamburger.svg) no-repeat; background-size: 28px 28px; border: none; color: transparent; height: 28px; width: 28px; }
+  .menu__toggle.toggled { background: url(images/close.svg) no-repeat; background-size: 28px 28px; position: absolute; } }
 
-@media screen and (max-width: 37.5em) { .main__nav.toggled .nav-menu { display: block; }
-  .main__nav ul { display: none; padding-left: 0; text-align: left; }
-  .main__nav ul li { display: block; border-top: 1px solid #eee; }
-  .main__nav ul li a { background: #404040; color: #fff; padding: 10px 20px; }
-  .main__nav ul li a:hover { background: rgba(64, 64, 64, 0.8); }
-  .main__nav ul ul, .main__nav ul ul ul { box-shadow: none; position: relative; top: inherit; left: 0; display: block; float: none; width: 100%; }
-  .main__nav ul ul li, .main__nav ul ul ul li { border: none; }
-  .main__nav ul ul a { padding-left: 40px; width: 100%; }
-  .main__nav ul ul ul a { padding-left: 60px; }
-  .main__nav .current_page_item > a, .main__nav .current-menu-item > a, .main__nav .current_page_ancestor > a, .main__nav .current_page_item > a:hover, .main__nav .current-menu-item > a:hover, .main__nav .current_page_item > a:focus, .main__nav .current-menu-item > a:focus { background: #404040; color: #fff; }
-  .main__nav ul ul .current_page_parent, .main__nav .current_page_parent .current_page_item > a { background: #404040; color: #fff; }
-  .main__nav ul ul .current_page_parent:hover, .main__nav .current_page_parent .current_page_item > a:hover { background: rgba(64, 64, 64, 0.8); color: #fff; } }
+@media screen and (max-width: 48em) { .custom-overflow { overflow-y: hidden; }
+  .main__nav.toggled { right: 0; }
+  .main__nav.toggled .nav-menu, .main__nav.toggled ul { display: block; z-index: 100; }
+  .main__nav { background: #fff; border: none; height: 97vh; position: absolute; right: -100%; top: 0px; width: 100%; z-index: 99; }
+  .main__nav .menu-main__nav-container { overflow: auto; }
+  .main__nav ul { display: none; padding: 30px; text-align: left; width: 100%; z-index: 100; }
+  .main__nav ul li { display: block; width: 100%; }
+  .main__nav ul li:hover { color: inherit; background: transparent; }
+  .main__nav ul li a { color: #404040; padding: 5px 10px; border: none; }
+  .main__nav ul li a:hover, .main__nav ul li a:focus { background: #339966; color: #fff; }
+  .main__nav ul ul, .main__nav ul ul ul { box-shadow: none; position: relative; top: inherit; left: 0px; display: block; float: none; width: 100%; z-index: 100; }
+  .main__nav ul ul li a, .main__nav ul ul ul li a { padding: 5px 5px 10px 30px; text-transform: none; width: 100%; } }
 
 .post { border-top: 1px solid #eee; padding-top: 1em; margin-bottom: 2em; }
 
