--- a/sass/sidebar/_sidebar.scss
+++ b/sass/sidebar/_sidebar.scss
@@ -1,16 +1,18 @@
 /* Sidebar Area 
 -------------------------------------------*/
 .widget {
-	padding: 0 0 30px 0;
+	background: $offwhite;
+	margin: 10px 0 20px;
+	padding: 10px 20px 20px;
 }
 
 .sidebar {
 	
 	ul {
 		list-style: none;
-		margin-left: 0.5em;
+		margin-left: 10px;
 		li {
-			padding: 0.5em 0;
+			padding: 10px 0;
 			font-size: $font__size--small;
 		}
 	}
